--- a/workflows/add-issues-to-project.yml
+++ b/workflows/add-issues-to-project.yml
@@ -9,10 +9,10 @@ on:
 
 jobs:
   add-to-project:
+    name: Add issue to project
     runs-on: ubuntu-latest
     steps:
-      - name: Add issue to project
-        uses: actions/add-to-project@v1.0.2
+      - uses: actions/add-to-project@v1.0.2
         with:
           project-url: https://github.com/orgs/noel-pointer-foundation/projects/1
           github-token: ${{ secrets.ADD_TO_PROJECT_PAT }}
